# call-me-maybe

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test.py
data/input/: test-input.json  wrong-input.json
llm_sdk/: __init__.py
llm_sdk/llm_sdk/: __init__.py
setup/: init.sh  install.sh  run.sh
srcs/: ReadInputJson.py  constrain_generation.py  functions.py  local_model.py  main.py  prompt_builder.py  reader.py  test.py
srcs/mappers/: system_prompt_validator.py  system_promt_validator.py  user_prompt_validator.py  user_promt_validator.py
